update lit, add wdc and remove webpack

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <title>Quiz Reader</title>
     <style>
+    body { margen: 0px; background-color: #eeeeee; }
     .jslicense { display: none; }
     </style>
   </head>
   <body>
-    <a href="./jslicense.html" rel="jslicense" class="jslicense"></a>
+    <div>
+    <qr-app></qr-app>
+    </div>
+    <script type="module" src="./src/components/qr-app.js"></script>
   </body>
 </html>
