add matamo, pagechange event

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Quiz Reader</title>
     <style>
-    body { margen: 0px; background-color: #eeeeee; }
+    body { margin: 0px; background-color: #eeeeee; }
     .jslicense { display: none; }
     </style>
+    <script src="matamo.js"></script>
   </head>
   <body>
     <div>
