run prettier, formatting only

--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Quiz Reader</title>
     <style>
-    body { margin: 0px; background-color: #eeeeee; }
-    .jslicense { display: none; }
+      body {
+        margin: 0px;
+        background-color: #eeeeee;
+      }
+      .jslicense {
+        display: none;
+      }
     </style>
     <script src="matamo.js"></script>
   </head>
   <body>
     <div>
-    <qr-app></qr-app>
+      <qr-app></qr-app>
     </div>
     <script type="module" src="./src/components/qr-app.js"></script>
   </body>
