--- a/src/jslicense.html
+++ b/src/jslicense.html
@@ -1,13 +1,17 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-<table id="jslicense-labels1">
-    <tr>
+  <body>
+    <table id="jslicense-labels1">
+      <tr>
         <td><a href="./app.js">quizreader</a></td>
-        <td><a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU-GPL-3.0-or-later</a></td>
+        <td>
+          <a href="http://www.gnu.org/licenses/gpl-3.0.html"
+            >GNU-GPL-3.0-or-later</a
+          >
+        </td>
         <td><a href="./app.js">quizreader</a></td>
-    </tr>
-</table>
-See also <a href="ThirdPartyNotice.txt">ThirdPartyNotice.txt</a>
-</body>
+      </tr>
+    </table>
+    See also <a href="ThirdPartyNotice.txt">ThirdPartyNotice.txt</a>
+  </body>
 </html>
